--- a/backend1/index.html
+++ b/backend1/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body class="h-full">
-    <div id="app" class="h-full"></div>
+  <body class="h-[100vh] bg-gray-100">
+    <div id="app" class="min-h-full"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
